[package]
name = "liqstr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
elements = "0.24.1"
nostr = "0.30.0"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"
incremental = false
