[package]
name = "liqstr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
elements = "0.24.1"
nostr = "0.30.0"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
reqwasm = "0.5"
serde_json = "1.0.116"
serde = "1.0.198"
base64 = "0.22.0"
wasm-bindgen = "0.2.92"
hex = "0.4.3"
wasm-bindgen-futures = "0.4.42"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"
incremental = false
